requirements/gateway/gateway.yaml
# https://cloud.google.com/kubernetes-engine/docs/how-to/deploying-gateways#redirect_http_traffic_from_the_gateway_namespace
apiVersion: v1
kind: Namespace
metadata:
  name: gateway-infra
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: gateway
  namespace: gateway-infra
spec:
  gatewayClassName: gke-l7-global-external-managed
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        kinds:
          - kind: HTTPRoute
        namespaces:
          from: All
      tls:
        mode: Terminate
        options:
          networking.gke.io/pre-shared-certs: wisvch-20230815, wisvch-20230901, hackdelft-certs-2026, areafiftylan-legacy, wisvch-20231010-1, wisvch-20231108, wisvch-20241127, chipcie-domains-20250417, wisvch-20251008, shuttr, wisvch-20260513
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        kinds:
          - kind: HTTPRoute
        namespaces:
          from: Same
  addresses:
    - type: NamedAddress
      value: gce-load-balancer-ipv4
    - type: NamedAddress
      value: gce-load-balancer-ipv6
---
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: redirect
  namespace: gateway-infra
spec:
  parentRefs:
    - namespace: gateway-infra
      name: gateway
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
